--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+gnews.apikey=3595d11c4b1db6bff475eec23c4aea24
+gnews.baseUrl=https://gnews.io/api/v4
+newsapi.username=unencrypted
+newsapi.password=shouldbrencrypted
+springdoc.swagger-ui.path=/swagger-ui.html
